Adding first pass of sample app - removing mis-structured stub Adding build process to generate complete sample app Updating documentation process to ignore new entries Switching to use globals instead of constants due to phpunit sandboxing issues

--- a/README
+++ b/README
@@ -1,1 +1,5 @@
 Stub - provide quick start installation instructions and the location to full docs
+
+for install of sample app
+update the sql insert to have an appropriate user and pass
+GRANT ALL PRIVILEGES ON sample.* TO 'user'@'%' IDENTIFIED BY 'password' WITH GRANT OPTION;
