--- a/wiki/HybridActions.wiki
+++ b/wiki/HybridActions.wiki
@@ -1,4 +1,5 @@
 #summary Description of actions configured for display and limited user submitted input.
+#sidebar TableOfContents
 
 = Introduction =
 
